--- a/achievements.html
+++ b/achievements.html
@@ -23,7 +23,7 @@
     <!-- Header -->
     <header>
       <h1>🏆 Achievements Gallery</h1>
-      <h5 class="bio">Celebrating my proudest moments — from projects to certifications. </h5>
+      <h5 class="bio">Celebrating my proudest moments — from projects to certifications.</h5>
     </header>
 
     <!-- Projects Section
@@ -88,16 +88,17 @@
         </div>
 
         <div class="certificate-card">
-          <img src="images/certificate.png" class="certificate-img" />
+          <img src="images/gov.png" class="certificate-img" />
           <p><strong>AI Aware</strong><br>Issued by MyDigital</p>
           <a href="certificates/aiaware.jpg" target="_blank" class="resume-button">🔍 View</a>
         </div>
 
         <div class="certificate-card">
-          <img src="images/certificate.png" class="certificate-img" />
+          <img src="images/gov.png" class="certificate-img" />
           <p><strong>AI Appreciate</strong><br>Issued by MyDigital</p>
           <a href="certificates/aiappreciate.jpg" target="_blank" class="resume-button">🔍 View</a>
         </div>
+        
 
         <!-- Add more certificates as needed -->
       </div>
