--- a/achievements.html
+++ b/achievements.html
@@ -52,37 +52,37 @@
 
       <div class="certificate-gallery">
         <div class="certificate-card">
-          <img src="images/certificate.png" class="certificate-img" />
+          <img src="images/cisco.png" class="certificate-img" />
           <p><strong>Introduction To Cybersecurity</strong><br>Issued by Cisco</p>
           <a href="certificates/cybersecurity.jpg" target="_blank" class="resume-button">🔍 View</a>
         </div>
 
         <div class="certificate-card">
-          <img src="images/certificate.png" class="certificate-img" />
+          <img src="images/cisco.png" class="certificate-img" />
           <p><strong>Introduction To Data Science</strong><br>Issued by Cisco</p>
           <a href="certificates/datascience.jpg" target="_blank" class="resume-button">🔍 View</a>
         </div>
 
         <div class="certificate-card">
-          <img src="images/certificate.png" class="certificate-img" />
+          <img src="images/cisco.png" class="certificate-img" />
           <p><strong>Computer Hardware Basics</strong><br>Issued by Cisco</p>
           <a href="certificates/hardware.jpg" target="_blank" class="resume-button">🔍 View</a>
         </div>
 
         <div class="certificate-card">
-          <img src="images/certificate.png" class="certificate-img" />
+          <img src="images/cisco.png" class="certificate-img" />
           <p><strong>Javascript Essentials</strong><br>Issued by Cisco</p>
           <a href="certificates/javascript.jpg" target="_blank" class="resume-button">🔍 View</a>
         </div>
 
         <div class="certificate-card">
-          <img src="images/certificate.png" class="certificate-img" />
+          <img src="images/cisco.png" class="certificate-img" />
           <p><strong>Networking Basics</strong><br>Issued by Cisco</p>
           <a href="certificates/networking.jpg" target="_blank" class="resume-button">🔍 View</a>
         </div>
 
         <div class="certificate-card">
-          <img src="images/certificate.png" class="certificate-img" />
+          <img src="images/cisco.png" class="certificate-img" />
           <p><strong>Operating Systems Basics</strong><br>Issued by Cisco</p>
           <a href="certificates/operatingsystem.jpg" target="_blank" class="resume-button">🔍 View</a>
         </div>
