--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,10 @@
       <h1>Contact Me</h1>
     </header>
 
+    <section class="duolingo-section">
+        <img src="images/duolingoprofile.jpg" alt="Profile Photo" class="duolingo-img" />
+    </section>
+
     <!-- Contact Section -->
     <section class="contact-section">
       <p>If you'd like to connect, feel free to reach out via email or social media!</p>
