--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
       <p>If you'd like to connect, feel free to reach out via email or social media!</p>
       <div class="icons">
       <!--  <a href="path/to/your-resume.pdf" ><img src="images/resume.png" alt="Resume icon" /></a> -->
+        <a href="https://www.facebook.com/jen.storypang"><img src="images/facebook.png" alt="Facebook icon" /></a>
         <a href="mailto:meijen226@yahoo.com.my"><img src="images/dove.png" alt="Email icon" /></a>
         <a href="https://linkedin.com/in/meijen" target="_blank"><img src="images/linkedin.png" alt="LinkedIn icon" /></a>
       </div>
