--- a/about.html
+++ b/about.html
@@ -36,7 +36,8 @@
     <section class="experience-section">
       <h2>Working Experience</h2>
       <ul class="experience-list">
-        <li><strong>Software Engineer</strong> <span class="date-range">(2017 - Current)</span></li>
+        <li><strong>Senior Software Engineer</strong> <span class="date-range">(2023 - Current)</span></li>
+        <li><strong>Software Engineer</strong> <span class="date-range">(2017 - 2023)</span></li>
         <li><strong>Part Time Computer Science Teacher</strong> <span class="date-range">(2022 - 2024)</span></li>
         <li><strong>Part Time Teacher</strong> <span class="date-range">(2013 - 2017)</span></li>
         <li><strong>Administrator Clerk</strong> <span class="date-range">(2012 - 2013)</span></li>  
