--- a/achievements.html
+++ b/achievements.html
@@ -52,6 +52,13 @@
 
       <div class="certificate-gallery">
         <div class="certificate-card">
+          <img src="images/jlptlogo.png" class="certificate-img" />
+          <p><strong>JLPT N5</strong><br>Issued by JLPT</p>
+          <a href="certificates/jlptn5.jpg" target="_blank" class="resume-button">🔍 View</a>
+        </div>
+
+      <div class="certificate-gallery">
+        <div class="certificate-card">
           <img src="images/cisco.png" class="certificate-img" />
           <p><strong>Introduction To Cybersecurity</strong><br>Issued by Cisco</p>
           <a href="certificates/cybersecurity.jpg" target="_blank" class="resume-button">🔍 View</a>
