--- a/achievements.html
+++ b/achievements.html
@@ -82,6 +82,12 @@
           <a href="certificates/jlptn5.jpg" target="_blank" class="resume-button">🔍 View</a>
         </div>
 
+        <div class="certificate-card">
+          <img src="images/googlelogo.png" class="certificate-img" />
+          <p><strong>Gemini Certified Educator</strong><br>Issued by Google</p>
+          <a href="certificates/geminieducator.jpg" target="_blank" class="resume-button">🔍 View</a>
+        </div>
+
       </div>
     </section>
 
